# qutrade

./: .coverage  .gitignore  README.md  key.txt  pyproject.toml
data/IBM/: IBM_Intraday  IBM_WeeklyAdjusted
experiments/: test_file.py
qutrade/: get_data.py  get_info.py  main.py  plot_module.py  scoring.py
qutrade/data/IBM/: IBM_Intraday  IBM_Intraday.csv  IBM_WeeklyAdjusted
qutrade/experiments/: test_file.py
qutrade/investigate/: __init__.py  _data_handler.py  _inspector.py  _time_series.py
qutrade/types/: __init__.py  _access.py
tests/unit/test_investigate/: test_inspector.py
tests/unit/test_types/: test_access.py
