[tool.poetry]
name = "qutrade"
version = "0.1.0"
description = ""
authors = ["brendan-reid91 <brendan.reid1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
alpha-vantage = "^2.3.1"
pytest = { version = "^6.2.5", optional = true }
pytest-cov = { version = "^3.0.0", optional = true }
pytest-xdist = { version = "^2.5.0", optional = true }
pytest-lazy-fixture = {version = "^0.6.3", optional = true}
pytest-repeat = { version = "^0.9.1", optional = true }
pytest-mock = { version = "^3.7.0", optional = true }
pylint = { version = "2.12.2", optional = true }
pycodestyle = { version = "^2.8.0", optional = true }
mypy = { version = "^0.931", optional = true }
autopep8 = { version = "^1.6.0", optional = true }
matplotlib = { version = "^3.3", optional = true }
pytest-benchmark = { version = "^3.4.1", optional = true}

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "pytest-lazy-fixture", "pytest-xdist", "pytest-repeat", "pytest-mock", "nbmake"]
lint = ["pylint", "mypy", "pycodestyle", "autopep8"]
benchmark = ["pytest", "pytest-benchmark"]
visualisation = ["matplotlib"]
docs = ["GitPython", "Sphinx", "sphinx-copybutton", "sphinx-rtd-theme", "sphinx-toggleprompt", "sphinx-autodoc-typehints", "recommonmark", "rinohtype", "nbsphinx", "ipykernel"]
licenses = ["pip-licenses"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
